[package]
name = "rustdoll"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging", "Win32_System_SystemInformation"] }
reqwest = { version = "0.12", features = ["blocking", "native-tls"] }